unpackaged/main/default/objects/Transfer__c/Transfer__c.object-meta.xml
<CustomObject>
    <label>Transfer</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Transfer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>