unpackaged/main/default/objects/Transfer__c/fields/Commitment_Name__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Name__c</fullName>
    <label>Commitment Name</label>
    <referenceTo>Commitment__c</referenceTo>
    <relationshipLabel>Transferred Amount from Commitment</relationshipLabel>
    <relationshipName>Transfer_From</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>