unpackaged/main/default/objects/Transfer__c/fields/New_Commitment__c.field-meta.xml
<CustomField>
    <fullName>New_Commitment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Commitment</label>
    <referenceTo>Commitment__c</referenceTo>
    <relationshipLabel>Transfer that created Commitment</relationshipLabel>
    <relationshipName>Transfer_To</relationshipName>
    <type>Lookup</type>
</CustomField>