unpackaged/main/default/objects/Transfer__c/fields/Transfer_to_Limited_Partner__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_Limited_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer to Limited Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transfers</relationshipLabel>
    <relationshipName>Transfer</relationshipName>
    <type>Lookup</type>
</CustomField>