unpackaged/main/default/objects/Transfer__c/fields/Transfer_to_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer to Partnership</label>
    <referenceTo>Partnership__c</referenceTo>
    <relationshipLabel>Transfers made to Partnership</relationshipLabel>
    <relationshipName>Transfer</relationshipName>
    <type>Lookup</type>
</CustomField>