unpackaged/main/default/objects/Transfer__c/fields/Transferred_from_Limited_Partner__c.field-meta.xml
<CustomField>
    <fullName>Transferred_from_Limited_Partner__c</fullName>
    <formula>Commitment_Name__r.LP_Lookup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transferred from Limited Partner</label>
    <type>Text</type>
</CustomField>