unpackaged/main/default/objects/Transfer__c/fields/Transferred_from_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Transferred_from_Partnership__c</fullName>
    <formula>Commitment_Name__r.Partnership_Lookup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transferred from Partnership</label>
    <type>Text</type>
</CustomField>