unpackaged/main/default/objects/Transfer__c/validationRules/Check_Limited_Partner_Fund_Co_Inv.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Limited_Partner_Fund_Co_Inv</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF(Commitment_Name__r.Limited_Partner__r.RecordTypeId &lt;&gt; Transfer_to_Limited_Partner__r.RecordTypeId , true, false), Commitment_Name__r.Portfolio_Company__c=null)</errorConditionFormula>
    <errorDisplayField>Transfer_to_Limited_Partner__c</errorDisplayField>
    <errorMessage>Please select a Limited Partner.</errorMessage>
</ValidationRule>