unpackaged/main/default/objects/Transfer__c/validationRules/Check_Partnership_Fund_Co_Inv.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Partnership_Fund_Co_Inv</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF( Transfer_to_Partnership__r.Fund_Investment_Category__c &lt;&gt; Commitment_Name__r.Partnership__r.Fund_Investment_Category__c, true, false ), Commitment_Name__r.Portfolio_Company__c=null)</errorConditionFormula>
    <errorDisplayField>Transfer_to_Partnership__c</errorDisplayField>
    <errorMessage>Please select a Fund Partnership for transferring the amount from a Fund Commitment.</errorMessage>
</ValidationRule>