unpackaged/main/default/objects/Transfer__c/validationRules/Check_Transfer_Data.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Transfer_Data</fullName>
    <active>true</active>
    <description>This VD Checks for any changes in the Transfer Object after it is created.</description>
    <errorConditionFormula>IF( OR( ISCHANGED(  New_Commitment__c ) , ISCHANGED( Commitment_Name__c ) , ISCHANGED( Transfer_Amount_nearest__c ), ISCHANGED(Transfer_to_Limited_Partner__c)  , ISCHANGED( Transfer_to_Partnership__c )) ,true,false)</errorConditionFormula>
    <errorMessage>Transfer information can&#39;t be edited</errorMessage>
</ValidationRule>