unpackaged/main/default/objects/Transfer__c/validationRules/Invalid_Coinvestment_Transfer_Chk.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Coinvestment_Transfer_Chk</fullName>
    <active>true</active>
    <errorConditionFormula>AND((IF( Transfer_to_Partnership__r.Fund_Investment_Category__c &lt;&gt; Commitment_Name__r.Partnership__r.Fund_Investment_Category__c, true, false )), Commitment_Name__r.Portfolio_Company__c&lt;&gt;null )</errorConditionFormula>
    <errorMessage>Please select a Co-investment Partnership for transferring the amount from a Co-investment Commitment.</errorMessage>
</ValidationRule>